Overhaul session right sidebar
